# poo1_2020-2_SP2_template

./: CMakeLists.txt  README.md  SP2.cpp  SP2.h  run.sh  test_1.cpp  test_1.in  test_2.cpp  test_2.in  test_3.cpp  test_3.in  test_4.cpp  test_4.in  test_5.cpp  test_5.in
